[gd_scene load_steps=2 format=3 uid="uid://sg8aojq0tulo"]

[ext_resource type="Script" uid="uid://cact05yto16x0" path="res://scripts/ui/LocationNode.gd" id="1_script"]

[node name="LocationNode" type="Control"]
custom_minimum_size = Vector2(80, 100)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 4
alignment = 1

[node name="IconContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="IconRect" type="ColorRect" parent="VBoxContainer/IconContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_filter = 2
color = Color(0.5, 0.5, 0.5, 1)

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="ExplorationLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.3, 1)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1

[node name="CharacterIcons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="EnterButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Enter"
